--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <link rel="stylesheet" href="stile.css">
     </head>
     <body>
-        <h1>SETTIMANA DELLO STUDENTE</h1>
-        <p>hack club</p>
-        <img src="https://upload.wikimedia.org/wikipedia/en/thumb/e/e2/Hack_Club_Flag_Standalone.svg/1920px-Hack_Club_Flag_Standalone.svg.png" height="100" alt="">
+        <h1>TIVOLI</h1>
+        <p>Tivoli è una cittadina in provincia di Roma</p>
+        <img src="https://images.app.goo.gl/FBGvFourLBeripGCA" height="100" alt="">
     </body>
 </html>
